--- a/mkdocs_bak.yml
+++ b/mkdocs_bak.yml
@@ -3,6 +3,8 @@ site_url: https://sitename.example
 theme:
   logo: assets/IMG_2595.png
   name: material
+  features:
+    - navigation.footer
   font:
     text: Merriweather Sans
     code: Red Hat Mono
@@ -28,3 +30,24 @@ markdown_extensions:
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
+  - pymdownx.tabbed:
+      alternate_style: true
+  - admonition
+  - pymdownx.details
+  - pymdownx.superfences
+
+extra:
+  social:
+    - icon: simple/youtube
+      link: https://youtube.com/@james-willett
+    - icon: simple/linkedin
+      link: https://linkedin.com/in/willettjames
+
+copyright: Copyright &copy; 2025 Dinesh Gopal
