--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,7 +5,7 @@ site_description: "Making Sense of AI Together"
 
 theme:
   name: material
-  logo: assets/logo.png
+  logo: assets/logo1.png
   favicon: assets/favicon.ico
   palette:
     - scheme: default
