--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,5 +25,5 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
-      - run: pip install mkdocs-material mkdocs-blogging-plugin mkdocs-rss-plugin mkdocs-git-revision-date-localized-plugin
+      - run: pip install mkdocs-material mkdocs-blogging-plugin mkdocs-rss-plugin mkdocs-git-revision-date-localized-plugin mkdocs-glightbox
       - run: mkdocs gh-deploy --force
