--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,6 +44,7 @@ plugins:
   - rss:
       site_url: https://yourdomain.com
   - git-revision-date-localized
+  - glightbox
 
 extra:
   social:
@@ -66,6 +67,8 @@ markdown_extensions:
   - pymdownx.emoji
   - attr_list
   - pymdownx.snippets
+  - md_in_html
+  - pymdownx.blocks.caption
   - pymdownx.tasklist:
       custom_checkbox: true
   - pymdownx.emoji:
