--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,6 +36,7 @@ nav:
   - Blog:
       - RAG to Riches – Accessing LLMs: posts/rag-access-llms.md
       - RAG to Riches – Data Setup: posts/rag-data-setup.md
+      - RAG to Riches – Prompt Engineering: posts/prompt-engineering.md
 
 plugins:
   - search
